test/error/VisibilityPrivateFieldDerivedStorage.fu
public class Base
{
	bool Priv = true;
}

public class Test : Base
{
	public static bool Run()
	{
		Test() o;
		return o.Priv; //ERROR: Cannot access private member 'Priv'
	}
}
